prevent text from wrapping

--- a/src/app/ds-buttons/white-button/white-button.component.scss
+++ b/src/app/ds-buttons/white-button/white-button.component.scss
@@ -6,6 +6,7 @@
 	box-shadow: 0 2px 10px rgba(16, 20, 24, 0.1);
 	border-radius: 8px;
 	padding-inline: 15px;
+	white-space: nowrap;
 	display: flex;
 	cursor: pointer;
 	justify-content: center;
